revise introduction and chapters 2 and 3

--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -31,6 +31,9 @@
 	 	\bibitem{Boolos}
 	 	Boolos, G. The Logic of Provability. Cambridge University Press. New York and Cambridge, 1993.
 	 	
+		\bibitem{bostrom}
+		Bostrom, N. Superintelligence: Paths, Dangers, Strategies. Oxford University Press. Oxford, 2014. 	
+	 	
 	 	\bibitem{coq_ref}
 	 	Barras, B.; Boutin, S.; Cornes, C.; Courant, J.; Filliatre, J.C.; Gimenez, E.; Herbelin, H.; Huet, G.; Munoz, C.; Murthy, C. and Parent, C. The Coq proof assistant reference manual: Version 6.1 (Doctoral dissertation, Inria). 1997.
 	 	
@@ -133,6 +136,9 @@
 	 	
 	 	\bibitem{Rushby_AssuranceCases}
 	 	Rushby, J. On the Interpretation of Assurance Case Arguments. {\em Proceedings of the Second International Workshop on Argument for Agreement and Assurance (AAA 2015)}. Springer LNCS.
+	 	
+	 	\bibitem{rushby_ontological}
+	 	Rushby, J. {\em Mechanized Analysis of a Formalization of Anselm's Ontological Argument by Eder and Ramharter.} CSL Technical Note, Menlo Park, CA, February 11, 2016.
 	 	
 	 	\bibitem{Rushby_TSIS}
 	 	Rushby, J. Trustworthy Self-Integrating Systems. {\em Springer LNCS}, {\bf 2016}, {\em 9581}, 19-29.
