--- a/Chapter_02.tex
+++ b/Chapter_02.tex
@@ -1,7 +1,7 @@
 \chapter{Background}
 	\label{CH_02}
 
-This chapter describes the context in which this dissertation makes advances. Section~\ref{sec:gametheory} lays out the basics of game theory, which provides a model of agency that we target and make more realistic. Section~\ref{sec:logic_foundation} introduces Dynamic Epistemic Logic, upon which the logic presented in this thesis is based, with axioms corresponding to the more realistic model of agency we develop. Section~\ref{sec:fm} describes the formal tools we use to mechanically check that \DASL\ is sound and complete, that its application to aviation safety is without errors, and to encode the inference of safety-critical information. Coq is both a programming language and a tool for verifying proofs, based on the Calculus of Inductive Constructions. We explain the basics of each of these to the reader in this section, since Coq is the tool we use for proof and application checking. Z3 is a theorem prover and model checker, which interract with solely for its SMT solving abilities. We encode the actual instrument readings as a first order formula, and we encode the safety precondition of an action as formulas comprising the constraining theory. We then check whether the formula is satisfiable modulo that theory. This tells us whether the intrument readings are consistent with the safety preconditions for an action, and if not, where the conflict lies. There is some additional complexity here, but we describe this in more detail in Chapter \ref{CH_05}.
+This chapter describes the context in which this dissertation makes advances. Section~\ref{sec:gametheory} lays out the basics of game theory, which provides a model of agency that we target and make more realistic. Section~\ref{sec:logic_foundation} introduces modal logic, upon which the logic presented in this thesis is based. We also describe the various epistemic and doxastic logics that have influenced \DASL's static base. Section \ref{sec:delsection} presents Dynamic Epistemic Logic and the so-called dynamic turn, which combines modalities for reasoning about how models change due to actions. \DASL\ extends this idea by including modalities for safe actions in addition to mere actions. Section~\ref{sec:fm} describes the formal tools we use to mechanically check that \DASL\ is sound and complete, that its application to aviation safety is without errors, and to encode the inference of safety-critical information. We use Coq, which is both a programming language and a tool for verifying proofs. 
 
 %Section 2.3 describes related work involving logical approaches to agents in system verification. Section 2.4 describes the Coq Proof Assistant, a tool for constructing mechanically checked mathematical proofs, to be used in this research.
 
@@ -429,20 +429,27 @@ We are concerned with an additional element: the \emph{safety} status of an acti
 
 \section{Formal Methods Tools}~\label{sec:fm}
 
-This section describes the Coq Proof Assistant \cite{coq_ref} and the Z3 Theorem Prover \cite{z3} that this dissertation makes use of. We use Coq to mechanically check our metatheory proofs of soundness and completeness, and our object theory proofs about safety-critical information flow. We use the Z3 Theorem Prover's capacity as a SMT solver to automatically infer missing safety-critical information based on an unsafe input action. This serves as a proof of concept for potential safety-critical information monitors that make use of \DASL\ as their foundation.
+This section describes the Coq Proof Assistant \cite{coq_ref} and that this dissertation makes use of. We use Coq to mechanically check our metatheory proofs of soundness and completeness, and our object theory proofs about safety-critical information flow. Insofar as this thesis constitutes a work of logic or formal philosophy, we hope it can serve as an example for how to use formal tools to increase the rigor of research in these areas.
 
-The Coq Proof Assistant is a combination of a dependently-typed functional programming language and a language of tactics for partially automating proof verification. Coq supports compilation to Haskell and OCaml, which is convenient because one can write a program and verify its correctness in Coq, then compile the code to a nicer implementation language. This dissertation does not take advantage of that feature. Instead, we embed \DASL\ in Coq and use it as a proof checker that allows us to write recursive functions and proof-automating tactics. This represents a second use case of formal verification tools that one does not often see in the philosophy, mathematics, or logic departments of academia. Coq becomes a tool for us to use to increase the rigor of our research. Many who have ventured into the realm of mechanical theorem proving have been surprised initially by how complicated proofs `by routine induction' can become once all of the details must be spelled out.
+The Coq Proof Assistant is a combination of a dependently-typed functional programming language and a language of tactics for partially automating proof verification. Coq supports compilation to Haskell and OCaml, which is convenient because one can write a program and verify its correctness in Coq, then compile the code to a nicer implementation language. This dissertation does not take advantage of that feature. Instead, we embed \DASL\ in Coq and use it as a proof checker that allows us to write recursive functions and proof-automating tactics. This represents a use case of formal verification tools that one does not often see in the philosophy, mathematics, or logic departments of academia. Coq is a tool for us to use to increase the rigor of our research. Many who have ventured into the realm of mechanical theorem proving have been surprised initially by how complicated proofs `by routine induction' can become once all of the details must be spelled out, and indeed one can discover embarrassing mistakes when forced to spell out each detail.
 
-We use Z3 in the same way. As a tool, it is a collection of symbolic reasoning engines, including simplex, rewriting, DPLL, superposition, Euclidean solver, and others.\footnote{Presentation by Dr. Leonardo DeMoura, ``From Z3 to Lean: Efficient Verification." } We use it to validate that one can encode an instrument reading configuration and a safety precondition for an input action, and automatically detect whether the safety precondition is satisfied by the instrument readings. This validates an important requirement for implementing tools based on \DASL. Thus, rather than using Z3 to verify correctness properties of a prototype, we use it as an inference engine that demonstrates real time inference of safety-critical information from unsafe input actions.
+%We use Z3 in the same way. As a tool, it is a collection of symbolic reasoning engines, including simplex, rewriting, DPLL, superposition, Euclidean solver, and others.\footnote{Presentation by Dr. Leonardo DeMoura, ``From Z3 to Lean: Efficient Verification." } We use it to validate that one can encode an instrument reading configuration and a safety precondition for an input action, and automatically detect whether the safety precondition is satisfied by the instrument readings. This validates an important requirement for implementing tools based on \DASL. Thus, rather than using Z3 to verify correctness properties of a prototype, we use it as an inference engine that demonstrates real time inference of safety-critical information from unsafe input actions.
 
-%The field of formal methods grew out of attempts to verify the correctness of hardware and software. It was normally confined to systems deemed mission- or safety-critical, due to its high cost. Arguments for the use of formal methods normally involve an anecdote in which a system fails due to some sort of error missed by traditional testing methods but that would have been caught and prevented were formal methods used.
+The field of formal methods grew out of attempts to verify the correctness of hardware and software. It was normally confined to systems deemed mission- or safety-critical, due to its high cost. Arguments for the use of formal methods normally involve an anecdote in which a system fails due to some sort of error missed by traditional testing methods but that would have been caught and prevented were formal methods used.
 
-%Formal methods increase confidence that hardware and software components function correctly~\cite{RushbyFMbook}. They involve the application of mathematical techniques to the design and analysis of systems, usually the safety-critical components~\cite{johnson_butler_fm}. A standard approach is to develop an abstract specification of the software or hardware system, design the system to meet those specifications, and then use formal logic to prove that the designed system meets the desired safety specifications. 
+Formal methods increase confidence that hardware and software components function correctly~\cite{RushbyFMbook}. They involve the application of mathematical techniques to the design and analysis of systems, usually the safety-critical components~\cite{johnson_butler_fm}. A standard approach is to develop an abstract specification of the software or hardware system, design the system to meet those specifications, and then use formal logic to prove that the designed system meets the desired safety specifications.
 
+Recent concerns with AI safety from Yudkowsky \cite{yudkowski} and Bostrom \cite{bostrom} in particular highlight the need for formal methods that address correctness of AI software. Among the many challenges associated with this endeavor, one is the ability to formally model the AI agents themselves. By hypothesis, checking the correctness of these systems after they have been built is insufficient, so a formal language for specifying correctness properties is also needed. We do not pretend to provide a solution to these problems in this thesis, but we take modest steps in that direction.
+
+By carefully choosing our axiom schemas, we construct a model of a human-like reasoner, and we show that we can specify formal properties about these reasoners. We do so with mechanization in Coq, which future work might be able to leverage through compilation to Haskell, OCaml, or some other functional language that preserves correctness proved in Coq.
+
+Additionally, the use of formal tools like Coq to model human-like agency offers opportunities for philosophers to formalize and explore the implications of their theories. Sometimes merely attempting to formalize a theory and failing will be a valuable contribution to say, epistemology. Rigorously formalizing arguments and checking their validity could be another use of this technology, and it has been used for example by Rushby in \cite{rushby_ontological}, where he mechanizes Anselm's onotological argument for the existence of God, and in doing so reveals some specious aspects. We hope our chapter on the philosophical considerations underlying epistemic logics contribute to the further adoption of formal tools for philosophical analysis.
+
+This concludes our discussion on formal methods as they relate to our thesis. In the next chapter, we present \DASL\ and argue for its adoption over other epistemic logics for reasoning about human-like agents.
 
 %According to the Federal Aviation Administration (FAA), one of the top 12 causes of mistakes in the aviation workplace is a lack of awareness~\cite{faa}. According to Boeing and the FAA, approximately 80 per cent of aviation accidents (including maintenance accidents) are due to human error~\cite{boeing,faaHF}. To increase safety in human factors, the industry relies on education, psychology, anthropometrics, safety engineering, and to a limited extent, computer science. The primary focus of computer science research regarding human factors is the design and testing of software systems that are easy and intuitive for humans to interact with. 
 
-%Formal methods are traditionally deployed in one of two ways. The more painful but perhaps more commonly used approach is to perform \emph{semantic archeology}, wherein an artifact that has already been constructed is formalized into a mathematically rigorous language and then reasoned about. The way urged by most contemporary researchers involves continuously specifying and verifying correctness throughout the development process, prior to system deployment. To facilitate this preferred approach, most formal methods researchers devote themselves to developing tools that are easy to use.
+%Formal methods are traditionally deployed in one of two ways. The more painful but perhaps more commonly used approach is to perform \emph{semantic archeology}, wherein an artifact that has already been constructed is formalized into a mathematically rigorous language and then reasoned about. The way urged by most contemporary researchers involves continuously specifying and verifying correctness throughout the development process, prior to system deployment. To facilitate this preferred approach, most formal methods researchers devote themselves to developing tools that are easier to use in order to lower the barrier to entry and increase adoption.
 %
 %The intended use of these tools, however, has remained the same: to verify the correctness of hardware and software systems, or to provide assistance to mathematicians attempting to prove theorems. At bottom, the tools allow computers to provide assistance to humans who are attempting to prove or disprove mathematical theorems.
 %
@@ -458,6 +465,8 @@ We use Z3 in the same way. As a tool, it is a collection of symbolic reasoning e
 %\end{enumerate}
 
 %\noindent They say human factors research focuses on mitigating item (1) above, and they develop formal models in the PVS automated theorem prover to address items (2) and (3). However, the formal models they develop are of the automation system, not of the human components.
+
+%In developing a realistic model of a human component that is capable of making mistakes, we lay a foundation for formal researchers to build tools that can identify and correct those mistakes at runtime.
 
 %Similarly, Rushby~\cite{Rushby_Mode_Confusion} describes a class of errors he calls automation surprises, which are distinct but related to mode confusion. These occur when a pilot becomes surprised by the automated behavior of the system. He proposes a formal method addressing automation surprises that constructs a model of the system behavior, constructs a formal specification of a possible pilot's mental model of the system, and compares them for disagreement. His solution focuses on identifying potential automation surprises in the system, and both models are of the system behavior itself: one directly of the model, and one indirectly of the model, mediated through a hypothetical pilot's mind.
 
