--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -334,10 +334,10 @@ First, the model should be well-balanced in the trade off of normativity \emph{v
 
 Second, the model should make sense from an epistemological standpoint, \emph{viz.} the philosophical considerations of epistemologists. To construct a system of epistemic logic is to construct a formal theory of epistemology for \emph{some} type of agent, whether it is a perfect deductive reasoner like a computer over a relatively small database ontology or \emph{homo economicus} in well-structured strategic situations, or an imperfect reasoner like a human in the real world. So far, the latter type of agent has been largely neglected by formal efforts, because attention has been on properties of formal systems, see below, rather than primarily on their philosophical foundations.\footnote{One significant exception to this claim is the study of bounded rationality, which imposes limitations on the number of iterations of $i$ knows that $k$ knows that $i$ knows \dots We regard this approach as valuable, but taking a different approach than ours. Typically, bounded rationality approaches still assume that knowledge is \SFive, while we relax this assumption because we regard it is philosophically untenable.}
 
-Third, the model should be a sound and complete logical system to serve as a static foundation for an extension that treats actions. Just because attention must be paid to the philosophical foundations and motivations for a formal system does not mean that the formal system is off the hook for the standard desiderata of a logic. The logic must avert a collapse of belief and knowledge. The logic must abide by the principle of indistinguishability, where an agent cannot distinguish between possible worlds it cannot rule out. 
+Third, the model should satisfy some basic formal criteria. It should be a sound and complete logical system to serve as a static foundation for an extension that treats actions. The logic must avoid a collapse of belief and knowledge into an equivalent operator. The logic must abide by the principle of indistinguishability, where an agent cannot distinguish between possible worlds it cannot rule out. A particularly challenging 
 
 \paragraph{1. Normative-Realism Trade-Off} 
-A model of rationality is situated in a spectrum trading off realism for normative evalutation and prescription. A totally idealized model like that of game theory or rational choice theory is entirely normative. There is no doubt that the agents being modeled are not anything like human beings. The model presumes normativity by showing that acting like an ideally rational agent results in optimal payoffs possible. So, for humans who want to optimize their decisions for payoffs, acting like ideally rational agents is best. However, ideally rational agents have properties that real humans lack, so unless a human can run a simulated agent on a correctly formalized model of a situation, she is unlikely to identify the correct action. After the fact, with a correctly formalized model of the situation, her decision can be analyzed in a post-mortem, but post-mortems never do any good for their subjects.
+A model of rationality is situated in a spectrum trading off realism for normative evaluation and prescription. A totally idealized model like that of game theory or rational choice theory is entirely normative. There is no doubt that the agents being modeled are not anything like human beings. The model presumes normativity by showing that acting like an ideally rational agent results in optimal payoffs possible. So, for humans who want to optimize their decisions for payoffs, acting like ideally rational agents is best. However, ideally rational agents have properties that real humans lack, so unless a human can run a simulated agent on a correctly formalized model of a situation, she is unlikely to identify the correct action. After the fact, with a correctly formalized model of the situation, her decision can be analyzed in a post-mortem, but post-mortems never do any good for their subjects.
 
 % First, we seek a model that is low on the tiers of rationality, so that it achieves a level of realism suitable for human agents but also maintains some normative prescriptions as a theory of rationality. The S5 common knowledge tier describes the behavior of ideally rational agents, and in this sense is wholly normative. However, this level of rationality is not achievable by human reasoners, due to their limited cognitive capacity. Thus, the theory of S5 common knowledge can serve to evaluate decisions made by human agents, and can realistically model only a very limited space of human behaviors. One would expect, however, that this theory of rationality would be an appropriate balance of realism and normativity for future systems of artificial intelligence. 
 
@@ -368,7 +368,7 @@ Along similar lines but in pursuit of different theoretical interests is the so-
 \paragraph{2. Philosophical Foundations}
 A formal epistemic theory should strive for adequate philosophical grounding in good epistemology. Hintikka took this very seriously in his 1967 book on \emph{Knowledge and Belief}\cite{Hintikka}, which serves as a seminal work in the field of formal epistemology. Hintikka dedicates a great portion of the book to exploring how his formal system handles the intuitive judgments of philosophers regarding ordinary language statements, which was the primary method at the time. An epistemic logic divorced from a philosophical foundation is no longer an epistemic logic for reasoning about human-like knowledge. Some idealized epistemic logics can serve as logics for reasoning about machine knowledge in closed worlds, but as machines come to interact with larger and more complex parts of the world, these idealized logics diminish in adequacy, as computational limitations prevent the machine from implementing even a perfect Bayesian reasoning system. Thus, careful consideration of an epistemic logic's philosophical foundation is in order.
 
-Epistemologists primarily seek a theory of justification that can avoid Gettier-style counterexamples~\cite{Gettier} and a theory of knowledge that can solve the problem of skepticism. A system of formal epistemology should respect these questions by coherently addressing them. We consider it required for a system of epistemic logic to be evaluated as a theory of epistemology. The epistemic logic of \SFive\ with common knowledge does not strive for this. We briefly recount some broad positions of interest from epistemology that our model should take a considered position on.
+Epistemologists primarily seek a theory of justification that coheres with our considered intuitions about cases, and a theory of knowledge that can solve the problem of skepticism. A system of formal epistemology should respect these questions by coherently addressing them. We consider it required for a system of epistemic logic to be evaluated as a theory of epistemology. The epistemic logic of \SFive\ with common knowledge does not strive for this. We briefly recount some broad positions of interest from epistemology that our model should take a considered position on.
 
 
 \subparagraph{The Space of Justification Theories}
