--- a/Introduction.tex
+++ b/Introduction.tex
@@ -51,19 +51,20 @@ With a bit more Boolean manipulation, we have the following:
 \end{equation*}
 This can be read, ``If an agent is rational but executes a bad action, then the agent lacked knowledge of the situation." Thus, embedded in the classical game-theoretic model of agency is a logical inference from bad action to missing knowledge. This makes intuitive sense upon reflection. If someone is rational, yet they commit an irrational (read: ``bad") action, then it must be the case that they didn't know some crucial information. With this insight in hand, I identify a logic in which the above inference is sound, with details about which particular pieces of information are missing from an agent's knowledge base when she executes a bad action. Again, it should not be surprising that such a logic exists, because classical game theory already posits a \emph{logical} relationship between knowledge of particular propositions and particular actions.
 
-I have formally captured such inferences with \DASL, where a (mostly) rational agent executes a bad action, and from this we can infer which safety-critical information they are missing. This can be done at run-time, as demonstrated herein by an encoding of the problem space for use by the Z3 theorem prover, which computes the missing information. We do not propose that a future avionics monitor actually run the Z3 tool on the aircraft, but rather use it here as a proof of concept, with implementation details left for future work.
+I have formally captured such inferences with \DASL, where a (mostly) rational agent executes a bad action, and from this we can infer which safety-critical information they are missing. By developing a logic that can model the information flow in these situations, we advance the project of formally reasoning about human agency. Credit for initiating this project belongs to many researchers over the years, especially philosophers in the analytic tradition concerned with analyzing the epistemology and metaphysics of agency in a rigorous fashion. I have been most influenced by the works of the Amsterdam school of modal logic, led by Professor Johan van Benthem, where the efforts center around rich combinations of modal logics in order to model human agency. In~\cite{VB_TowardPlay}, they develop a modal logic for reasoning about the knowledge and decision-making of agents in games, and in~\cite{VB_LDII}, van Benthem explores similar themes around information flow and interaction.
+%This can be done at run-time, as demonstrated herein by an encoding of the problem space for use by the Z3 theorem prover, which computes the missing information. We do not propose that a future avionics monitor actually run the Z3 tool on the aircraft, but rather use it here as a proof of concept, with implementation details left for future work.
 
 % relevant part of the inference, formalized as a set of clauses in first order logic. The actual impThe prototype satisfies an information assurance property not yet treated formally by the literature, but done so here with \DASL. The property formalizes the idea that safety-critical information should not fail to reach a human and inform her actions. This is more than the information assurance property of \emph{availability}, because it is available to her only in a passive sense. It must be actively and specifically \emph{delivered} by ensuring that non-critical information does not compete for the human's awareness at critical moments. Formally specifying this property is another contribution of this thesis. 
 
 %I apply these formal ideas to the domain of aviation safety, specifically incidents involving pilot errors that contribute to fatal mishaps. This is both an important area of research, where advancements can help save lives, but it also satisfies some desirable properties as a domain. When a new modal logic is developed, it is usually first applied to simple, closed domains, like games, involving simple agents with relatively few choices compared to the rich variability one can find in real life. Similarly, the environmental factors modeled in these situations are usually quite closed. To extend these logics into a realistic domain involving complex human agents and environments is quite a leap. The cockpit is a nice step between the two, because the relevant environment is not simple, but not as rich as a more general environment. The environment that must be modeled consists of discrete instruments with a somewhat limited range of possible values. The agents are real humans, but concerned with a limited number of actions involving inputs that manipulate the airplane's flight. Another advantage of the human agents in aviation is that they are highly trained, and so meet a level of rationality in the problem space that is not quite the full blown rationality of game theoretic agents, but is certainly better than an average human navigating a random problem encountered in the real world. Thus, human pilots in the cockpit are a Goldilocks zone of human agency that is more realistic than the agents in most game examples, but not quite as complex as humans in the more general problem space of reality writ large.
 
-By developing a logic that can model the information flow in these situations, we advance the project of formally reasoning about human agency. Credit for initiating this project belongs to many researchers over the years, especially philosophers in the analytic tradition concerned with analyzing the epistemology and metaphysics of agency in a rigorous fashion. I have been most influenced by the works of the Amsterdam school of modal logic, led by Professor Johan van Benthem, where the efforts center around rich combinations of modal logics in order to model human agency. In~\cite{VB_TowardPlay}, they develop a modal logic for reasoning about the knowledge and decision-making of agents in games, and in~\cite{VB_LDII}, van Benthem explores similar themes around information flow and interaction. 
+ 
 
 The history of research in this area dates back to the 1950s and '60s in the development of temporal logic (or tense logic) by Arthur Prior~\cite{Prior}, a graph theoretic semantics by Saul Kripke~\cite{Kripke}, and logics for belief and knowledge due to work by Rescher~\cite{rescher}, von Wright~\cite{vonWright}, and Hintikka~\cite{Hintikka}. These logics formalize reasoning about what was true, what will be true at some point, what is always going to be true, what is believed to be true, and what is known to be true. Each of these modifiers is a truth modality, and hence they each constitute a modal logic. The Amsterdam school and others built on these methods, especially the work by Patrick Blackburn~\cite{modal}, which illustrates the general features of any modal logic as a tool for reasoning about systems that can be modeled as graphs from an \emph{internal} perspective, whereas first order logic reasons about such systems from an external perspective. A first order formula might say what is true of the object \emph{x}, from a global perspective, but modal logic allows us to formalize truth from \emph{x}'s perspective. If the first order formula is $\forall x, \exists y:\ R(x,y) \tland P(y) \iimplies P(x)$, the corresponding modal formula would simply be $\Diamond_{R} p \iimplies p$. They both say the same thing: For any node $x$ in the graph, if it can reach a node $y$ by relation $R$, and $y$ is a node where the proposition ``\emph{y} is \emph{P}'' holds, then ``\emph{x} is \emph{P}'' holds. The former explicitly quantifies over the nodes, and the latter does so implicitly through the semantics, to be described later.
 
 While these developments occurred in what might be called the philosophical branch of modal logic research, researchers in economics explored the mathematical foundations of game theory. Aumann, in~\cite{Aumann}, showed the axioms of epistemic logic that must be assumed in order for classical game theoretic results to hold. The agents in classical games, otherwise known as \emph{homo economicus}, are ideally rational, with perfect knowledge of their situations. We will meet these axioms and modify them for our purposes later.
 
-The final foundational school of modal logic comes from theoretical computer science, where computer programs are modeled as state transition diagrams. As a program executes, the computer transitions from state to state, where each state is a collection of values assigned to variables, and each transition is a simple action executed. As this formalization lends itself to graph theoretic representation, it lends itself to formalization in modal logic, per Blackburn's insight. There are two main approaches to applying modal logic to the analysis of programs. The first is a static approach, where the entirety of the program's execution tree is modeled at once. Transitions from each state are captured by temporal logic. A program might be formalized in temporal logic, and the following theorem might be proven of it: \emph{At the source of the execution graph, it will always be true that bad event B does not occur}~\cite{Pnueli}. The second approach is dynamic, where each simple transition action A or B gets a modal operator, which allows us to reason about what happens after every execution of subprocess A, or after some executions of subprocess B, etc~\cite{HarelKozenTiuryn}. 
+Advances in dynamic modal logic come from theoretical computer science, where computer programs are modeled as state transition diagrams. As a program executes, the computer transitions from state to state, where each state is a collection of values assigned to variables, and each transition is a simple action executed. As this formalization lends itself to graph theoretic representation, it lends itself to formalization in modal logic, per Blackburn's insight. There are two main approaches to applying modal logic to the analysis of programs. The first is a static approach, where the entirety of the program's execution tree is modeled at once. Transitions from each state are captured by temporal logic. A program might be formalized in temporal logic, and the following theorem might be proven of it: \emph{At the source of the execution graph, it will always be true that bad event B does not occur}~\cite{Pnueli}. The second approach is dynamic, where each simple transition action A or B gets a modal operator, which allows us to reason about what happens after every execution of subprocess A, or after some executions of subprocess B, etc~\cite{HarelKozenTiuryn}. 
 
 One thing that is easy to do with dynamic modal logic but somewhat complicated in the static approach is to model actions and knowledge. An epistemic logic is modeled by a static Kripke structure, and in the dynamic case this structure changes as the agents act and learn different things. The static approach requires a grand two dimensional Kripke structure with one dimension capturing the epistemic relations at a moment, and one dimension capturing the temporal relation as actions move forward through time. For an example of this approach, see John Horty~\cite{Horty}. For the dynamic approach, see van Ditmarsch \emph{et al.}~\cite{DEL}. 
 
@@ -82,4 +83,4 @@ In order to adequately model human agency, we must depart from the familiar and 
  
 %My research validates the approach by using \DASL to analyze aviation mishaps, illustrating its usefulness. I formalize three aviation mishaps in \DASL, and this shows how \DASL allows for the inference of particular safety-critical information from actions. Establishing this logical inference is one thing, computing the inference is another. My thesis proceeds by using the Z3 Theorem Prover to compute the safety-critical information. My proposal is to extend this research by constructing a monitor prototype based on the logic suitable for runtime diagnosis of information misflow, that is, when safety-critical information fails to reach the human agent and inform her actions. Because we can deduce which safety-critical information is missing from her knowledge base, we can automatically act to correct this misflow.This is where information assurance comes in. Information assurance is the field of computer science studying the desirable properties of information systems relating to information flow. In particular, information assurance is concerned with properties like confidentiality, integrity, and availability, among others. If a system is designed to interact with a human, then one of its desired properties is that the safety-critical information successfully flows to the human and informs her actions. Sometimes humans become overwhelmed by information competing for their attention, especially during emergency situations. This phenomenon is called information overload. It leads to human behavior that is suboptimal and often dangerous~\cite{hwang}. The problem, in terms of information assurance properties, is that some safety-critical information is not reaching the human component because the human component's cognitive resources are unavailable, suffering from a sort of denial-of-service attack. I propose to formally characterize this situation in my research, and offer strategies for automated enforcement of safety-critical information reaching the human component.
 
-In what follows, we describe the relevant background material in Chapter~\ref{CH_02}, including the foundations of game theory and the logical models of agency informing our new developments. Chapter~\ref{CH_03} motivates departure from \SFive\ as a static base and present \DASL, then proves that it is sound and complete using the Coq Proof Assistant. Chapter~\ref{CH_04} applies \DASL\ to three aviation mishaps, again formalized in Coq. Chapter~\ref{CH_05} uses the Z3 Theorem Prover's Satisfiability Modulo Theory (SMT) solving capabilities to encode the aviation mishaps and demonstrate the inference of the missing safety-critical information.
+In what follows, we describe the relevant background material in Chapter~\ref{CH_02}, including the foundations of game theory and the logical models of agency informing our new developments. Chapter~\ref{CH_03} motivates departure from \SFive\ as a static base and presents \DASL, then proves that it is sound and complete using the Coq Proof Assistant. Chapter~\ref{CH_04} applies \DASL\ to three aviation mishaps, again formalized in Coq. Chapter~\ref{CH_05} considers a problem facing logics that allow for reasoning about self-referential sentences, due to G\"odel and L\"ob's discoveries. We present L\"ob's Obstacle that these logics face, and show how to relax \DASL\ in order to avoid it, when the agents being modeled must be capable of self-reflection. In \ref{CH_summary} we summarize and conclude.
