--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -1,8 +1,8 @@
 \thispagestyle{empty}
 
 \vspace*{\fill}
-\centerline{\large{\bf FORMAL METHODS WITH}} % The title on the Title Page must be in all caps.
-\centerline{\large{\bf DYNAMIC AGENT SAFETY LOGIC}}
+\centerline{\large{\bf DYNAMIC AGENT SAFETY LOGIC:}} % The title on the Title Page must be in all caps.
+\centerline{\large{\bf THEORY AND APPLICATIONS}}
 \vskip 10mm
 \centerline{\rule{150mm}{0.2mm}} % You can adjust the length of the horizontal line here.
 \vskip 10mm
