fix definition of negative formula

--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -870,7 +870,7 @@ We first explain what a Sahlqvist formula is. A Sahlqvist formula is composed of
 
 A \emph{Sahlqvist implication} is a formula with a \emph{Sahlqvist antecedent} and a \emph{positive consequent}.
 
-A formula is \emph{positive} if all of its propositional letters are in the scope of an even number of negation signs. A formula is \emph{negative} if one or more of its propositional letters are in the scope of an odd number of negation signs.
+A formula is \emph{positive} if all of its propositional letters are in the scope of an even number of negation signs. A formula is \emph{negative} if all of its propositional letters are in the scope of an odd number of negation signs.
 
 A \emph{Sahlqvist antecedent} is a formula built from $a)$ propositional letters prefixed by $n\geq0$ $\Box$'s and $b)$ negative formulas, $c)$ using only $\tlor$, $\tland$, and $\Diamond$ to build the antecedent from $(a)$ and $(b)$ components. We can now state the key theorems.
 
